[tool.poetry]
name = "geo-city"
version = "0.1.0"
description = ""
authors = ["Artem 'artctv' <artctvcode@gmail.com>"]
readme = "README.md"
packages = [{include = "geo_city"}]

[tool.poetry.dependencies]
python = "3.9.15"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
